--- a/package.json
+++ b/package.json
@@ -7,22 +7,27 @@
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/connect": "^3.4.38",
     "@types/cors": "^2.8.13",
-    "@types/jsonwebtoken": "^9.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "bcrypt": "^5.1.1",
+    "connect": "^3.7.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "dotenv": "^16.3.1",
-    "express": "~4.16.1",
-    "jsonwebtoken": "^9.0.1",
-    "mongodb": "^5.7.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^5.9.2",
     "mongoose": "^7.3.2",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/node": "^20.4.0",
+    "@types/node": "^20.15.0",
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.0",
     "typescript": "^5.4.3"
