remove server container

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -30,5 +30,9 @@ jobs:
         run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
       - name: Pull image from docker Image
         run: docker pull youshahch4499/zibzo_server:latest
+      - name: Stop zibzo_server-container Container
+        run: docker stop zibzo_server-container
+      - name: Remove zibzo_server-container Container
+        run: docker rm zibzo_server-container
       - name: Run docker Container
         run: docker run -d -p 4000:4000 --name zibzo_server-container -e MONGO_PASSWORD='${{secrets.MONGO_PASSWORD}}' youshahch4499/zibzo_server
