--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -32,4 +32,4 @@ jobs:
         run: docker pull youshahch4499/zibzo_server:latest
 
       - name: Run docker Container
-        run: docker run -d -p 4000:4000 --name zibzo_server-container -e MONGO_PASSWORD='${{secrets.MONGO_PASSWORD}}' youshahch4499/zibzo_server
+        run: docker run -d -p 4000:4000 --name zibzo_server-container -e PORT=4000 -e MONGO_PASSWORD='${{secrets.MONGO_PASSWORD}}' youshahch4499/zibzo_server
