server deployed on AWS ec2

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -3,8 +3,8 @@ name: "Deploy Zibzo application server"
 on:
   push:
     branches:
-      - API_v2
-
+      - "**"
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
