--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -35,4 +35,4 @@ jobs:
       - name: Remove old container
         run: docker rm -f zibzo_server-container
       - name: Run docker Container
-        run: docker run -d -p 4000:4000 --name zibzo_server-container -e PORT=4000 -e MONGO_PASSWORD='${{secrets.MONGO_PASSWORD}}' youshahch4499/zibzo_server
+        run: docker run -d --name zibzo_server-container -e PORT=4000 -e MONGO_PASSWORD='${{secrets.MONGO_PASSWORD}}' youshahch4499/zibzo_server
