--- a/.github/workflows/server_CICD.yml
+++ b/.github/workflows/server_CICD.yml
@@ -13,12 +13,28 @@ jobs:
         node-version: [20.x]
 
     steps:
+      # Step 1: Checkout the source code
       - uses: actions/checkout@v4
+
+      # Step 2: Setup Node.js
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "npm"
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npm test
+
+      # Step 3: Clean the workspace
+      - name: Remove lock files and node_modules
+        run: |
+          rm -rf package-lock.json npm-shrinkwrap.json node_modules
+
+      # Step 4: Install dependencies
+      - name: Install Dependencies
+        run: npm install
+
+      # Step 5: Build the project
+      - name: Build the Project
+        run: npm run build --if-present
+
+      # Step 6: Run tests
+      - name: Run Tests
+        run: npm test
