--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon dist/app.js",
-    "docker:build": "docker build -f ./Dockerfile . "
+    "start": "nodemon dist/app.js"
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
