--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,9 @@
 {
     "builds": [
-      { "src": "*.js", "use": "@vercel/node" }
+      { "src": "dist/index.js", "use": "@vercel/node" }
     ],
-    
-        "routes": [
-          
-          { "src": "/(.*)", "dest": "/" }
-        ]
-      
+    "routes": [
+      { "src": "/(.*)", "dest": "dist/index.js" }
+    ]
   }
+  
