--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,3 +62,32 @@ jobs:
             echo "Response body: $(cat response_body.txt)"  # Output the response body for debugging purposes
             exit 1  # Fail the job if the request was not successful
           fi
+
+      # Step 4: Check Deployment Status on Render
+      - name: Check Deployment Status on Render
+        env:
+          service_id: ${{ secrets.RENDER_SERVICE_ID }} # Render service ID secret
+          api_key: ${{ secrets.RENDER_API_KEY }} # Render API key secret
+        run: |
+          echo "Checking deployment status on Render..."
+
+          # Poll Render API until the deployment is live or failed
+          status=""
+          until [[ "$status" == "live" || "$status" == "failed" ]]; do
+            # Make an API call to Render to get the service status
+            response=$(curl -s -H "Authorization: Bearer $api_key" \
+                             "https://api.render.com/v1/services/$service_id" | jq -r '.service.status')
+
+            echo "Current deployment status: $response"
+            
+            if [[ "$response" == "live" ]]; then
+              echo "Deployment is live!"
+              break
+            elif [[ "$response" == "failed" ]]; then
+              echo "Deployment failed."
+              exit 1  # Fail the job if deployment fails
+            fi
+            
+            # Wait for 10 seconds before checking again
+            sleep 10
+          done
