--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "node dist/app.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.713.0",
+    "@aws-sdk/s3-request-presigner": "^3.713.0",
     "@types/bcrypt": "^5.0.0",
     "@types/connect": "^3.4.38",
     "@types/cors": "^2.8.13",
@@ -15,8 +17,9 @@
     "connect": "^3.7.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^5.9.2",
